--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,12 @@
   </a>
   <a href="#Notas">Notas</a>
   <a href="#Nueva nota" @click="nuevaNota">Nueva nota</a>
+
+  <div v-if="usuarie">
+    <span>{{ usuarie.displayName }}</span>
+    <img height="20" width="20" :src="usuarie.photoURL">
+  </div>
+  <button v-else @click="entrar">Entrar</button>
 </nav>
 
 
@@ -33,17 +39,16 @@
 
     <fieldset>
       <legend>Variedad</legend>
-      <label v-for="(_, variedad) of variedades">
-        <input v-model="nota.variedad" type="radio" :value="variedad">
-        {{ variedad.capitalize() }}
+      <label v-for="(_, id) of variedades">
+        <input v-model="nota.variedad" type="radio" :value="id">
+        {{ id.capitalize() }}
       </label>
     </fieldset>
 
     <label>
-      Varietal
-      <select v-model="varietal">
-        <option disabled value="">Seleccionar...</option>
-        <option v-for="(_, varietal) of varietalesDeLaVariedad" :value="varietal">{{ varietal.capitalize() }}</option>
+      Varietales
+      <select multiple v-model="nota.varietales">
+        <option v-for="(_, id) of varietalesDeLaVariedad" :value="id">{{ id.capitalize() }}</option>
       </select>
     </label>
 
@@ -73,9 +78,9 @@
 
     <fieldset>
       <legend>Color</legend>
-      <label v-for="({ código }, color) of coloresDeLaVariedad" :style="{ color: código }">
-        <input v-model="nota.color" type="radio" :value="color">
-        {{ color.capitalize() }}
+      <label v-for="({ código }, id) of coloresDeLaVariedad" :style="{ color: código }">
+        <input v-model="nota.color" type="radio" :value="id">
+        {{ id.capitalize() }}
       </label>
     </fieldset>
   </section>
@@ -83,22 +88,22 @@
   <section>
     <h2>Oler y gustar</h2>
 
-    <fieldset v-for="({ descriptor }, sabor) of saboresDelVarietal">
-      <legend><i>{{ descriptor.capitalize() }}</i> &gt {{ sabor.capitalize() }}</legend>
-      <img height="64" width="64" :src="'img/' + sabor.replace(/ /g,'-') + '.svg'">
-      <input v-model="nota.sabores[sabor]" type="checkbox">
+    <fieldset v-for="({ descriptor }, id) of saboresDelVarietal">
+      <legend><i>{{ descriptor.capitalize() }}</i> &gt {{ id.capitalize() }}</legend>
+      <img height="64" width="64" :src="`img/${ id.replace(/ /g,'-') }.svg`">
+      <input v-model="nota.sabores" type="checkbox" :value="id">
     </fieldset>
   </section>
 
   <section>
     <h2>Estructura</h2>
 
-    <fieldset v-for="(mapa, elemento) of estructura">
-      <legend>{{ elemento.capitalize() }}</legend>
+    <fieldset v-for="(mapa, id) of estructura">
+      <legend>{{ id.capitalize() }}</legend>
       <img height="64" width="64">
       <label>
-        {{ [ 'seleccionar...', ...mapa ][$root[elemento]].capitalize() }}
-        <input v-model.number="$root[elemento]" type="range" max="3">
+        {{ [ 'seleccionar...', ...mapa ][$root[id]].capitalize() }}
+        <input v-model.number="$root[id]" type="range" max="3">
       </label>
     </fieldset>
   </section>
@@ -138,14 +143,14 @@
     <tr>
       <th>Vino</th>
       <th>Variedad</th>
-      <th>Varietal</th>
+      <th>Varietales</th>
     </tr>
   </thead>
   <tbody>
-    <tr v-for="(data, id) of notas" @click="mostrarNota(id)">
-      <td>{{ presentarVino(data) || '-' }}</td>
-      <td>{{ data.variedad ? data.variedad.capitalize() : '-' }}</td>
-      <td>{{ data.varietal ? data.varietal.capitalize() : '-' }}</td>
+    <tr v-for="(nota, id) of notas" @click="mostrarNota(id)">
+      <td>{{ [nota.productor, nota.línea, nota.nombre, nota.cosecha].filter(Boolean).join(' ') }}</td>
+      <td>{{ nota.variedad ? nota.variedad.capitalize() : '' }}</td>
+      <td>{{ nota.varietales.map(varietal => varietal.capitalize()).join(', ') }}</td>
     </tr>
   </tbody>
 </table>
