--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 
   <style type="text/css">
+    [v-cloak] {
+      display: none;
+    }
+
     input:checked + label {
       color: #ED64A6;
     }
@@ -19,7 +23,13 @@
     }
 
     input[type=number] {
-      -moz-appearance:textfield;
+      -moz-appearance: textfield;
+    }
+
+    .tarjeta {
+      -webkit-column-break-inside: avoid;
+                page-break-inside: avoid;
+                     break-inside: avoid;
     }
   </style>
 </head>
@@ -29,7 +39,7 @@
 <nav class="h-12 bg-white border-b border-pink-500 fixed top-0 inset-x-0 z-50">
 <div class="w-full h-full max-w-screen-xl mx-auto px-6 flex items-center justify-between">
   <a href="/" @click.prevent="navegar" class="flex items-baseline">
-    <img src="img/wine.svg" class="h-5 mr-1">
+    <img height="20" src="img/wine.svg" class="h-5 mr-1">
     notas de cata
   </a>
 
@@ -39,15 +49,15 @@
 
 <div class="w-full max-w-screen-xl mx-auto px-6 py-8 mt-12">
 
-<div v-show="vista === '404'">
+<div v-cloak v-show="vista === '404'">
   <p>Página no encontrada :(</p>
 </div>
 
-<div v-show="vista === 'inicio'" class="flex">
+<div v-cloak v-show="vista === 'inicio'" class="flex">
   <button @click="entrar" class="bg-white border border-pink-500 font-bold py-2 px-6 mx-auto shadow-md hover:bg-gray-300">Acceder</button>
 </div>
 
-<div v-show="vista === 'nota'">
+<div v-cloak v-show="vista === 'nota'">
   <form @submit.prevent="guardarNota">
 
     <section class="flex justify-end p-1 max-w-sm">
@@ -68,12 +78,12 @@
         </div>
       </div>
 
-      <label class="bg-gray-100 h-16 p-1 mb-1">
-        Varietales
-        <select multiple v-model="nota.varietales">
+      <div class="flex bg-gray-100 h-16 p-1 mb-2">
+        <label for="varietales" class="w-1/3 flex-shrink-0">Varietales</label>
+        <select multiple v-model="nota.varietales" id="varietales" class="w-full h-full text-sm font-light">
           <option v-for="(_, id) of varietalesDeLaVariedad" :value="id">{{ id.capitalize() }}</option>
         </select>
-      </label>
+      </div>
 
       <div class="flex items-center h-8 p-1 mb-1">
         <label for="productor" class="w-1/3 flex-shrink-0 font-light">Productor</label>
@@ -98,7 +108,7 @@
 
     <h2 class="inline bg-white text-xl">Vista</h2>
     <section class="bg-white mb-4 p-1 max-w-sm">
-      <div>
+      <div v-if="coloresDeLaVariedad">
         <h3 class="pl-1 mb-1">Color</h3>
         <label v-for="({ código }, id) of coloresDeLaVariedad" :style="{ background: código }" class="block h-16 mb-1">
           <div class="absolute bg-white px-2 py-1 text-sm font-light" :style="{ color: código }">
@@ -107,12 +117,13 @@
           </div>
         </label>
       </div>
+      <p v-else class="font-light p-1">Seleccionar una variedad.</p>
     </section>
 
     <h2 class="inline bg-white text-xl">Olfato y gusto</h2>
     <section class="bg-white mb-4 p-1 max-w-sm">
-      <div v-for="({ descriptor }, id) of saboresDelVarietal">
-        <label class="flex items-start bg-gray-100 h-16 p-1 pl-2 mb-1">
+      <div v-if="saboresDelVarietal">
+        <label v-for="({ descriptor }, id) of saboresDelVarietal" class="flex items-start bg-gray-100 h-16 p-1 pl-2 mb-1">
           <input v-model="nota.sabores" type="checkbox" :value="id">
           <img :src="`img/${ id.replace(/ /g,'-') }.svg`" class="h-full mx-2">
           <div>
@@ -121,6 +132,7 @@
           </div>
         </label>
       </div>
+      <p v-else class="font-light p-1">Seleccionar al menos un varietal.</p>
     </section>
 
     <h2 class="inline bg-white text-xl">Estructura</h2>
@@ -177,13 +189,13 @@
   </form>
 </div>
 
-<div v-show="vista === 'lista'">
+<div v-cloak v-show="vista === 'lista'">
   <div class="flex justify-center">
     <a href="nueva-nota" @click.prevent="navegar" class="bg-pink-300 hover:bg-pink-500 font-bold py-2 w-2/3 text-center mb-10">Nueva nota</a>
   </div>
 
   <section style="column-count: 2; column-gap: 0px" class="-mx-1">
-    <div v-for="(nota, id) of notas" @click="navegar(id)" class="text-sm leading-none tracking-tight bg-white mb-2 mx-1 p-1 overflow-hidden" style="min-height: 5em; max-height: 15em">
+    <div v-for="(nota, id) of notas" @click="navegar(id)" class="tarjeta text-sm leading-none tracking-tight bg-white mb-2 mx-1 p-1 overflow-hidden" style="min-height: 5em; max-height: 15em;">
       <div class="font-medium mb-2">
         {{ [nota.productor, nota.línea, nota.nombre, nota.cosecha].filter(Boolean).join(' ') }}
       </div>
