--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,15 @@
                 page-break-inside: avoid;
                      break-inside: avoid;
     }
+
+    @keyframes ruedita {
+      to {transform: rotate(360deg);}
+    }
+
+    #cargando {
+      border-top-color: #ED64A6;
+      animation: ruedita .6s linear infinite;
+    }
   </style>
 </head>
 <body>
@@ -49,143 +58,161 @@
 
 <div class="w-full max-w-screen-xl mx-auto px-6 py-8 mt-12">
 
+<div v-cloak v-show="vista === 'cargando'">
+  <div id="cargando" class="rounded-full border-transparent border-4 h-10 w-10 mx-auto mt-12"></div>
+</div>
+
 <div v-cloak v-show="vista === '404'">
   <p>Página no encontrada :(</p>
 </div>
 
-<div v-cloak v-show="vista === 'inicio'" class="flex">
-  <button @click="entrar" class="bg-white border border-pink-500 font-bold py-2 px-6 mx-auto shadow-md hover:bg-gray-300">Acceder</button>
+<div v-cloak v-show="vista === 'inicio'">
+  <button @click="entrar" class="block bg-white border border-pink-500 font-bold py-2 px-6 mx-auto mt-12 shadow-md hover:bg-gray-300">Acceder</button>
 </div>
 
 <div v-cloak v-show="vista === 'nota'">
-  <form @submit.prevent="guardarNota">
+  <form @submit.prevent="guardarNota" class="flex flex-wrap items-start justify-around">
 
-    <section class="flex justify-end p-1 max-w-sm">
-      <input v-model="nota.fecha" type="date">
+    <section class="w-full max-w-sm">
+      <div class="flex justify-end p-1">
+        <input v-model="nota.fecha" type="date">
+      </div>
+
+      <h2 class="inline bg-white text-xl">Vino</h2>
+      <div class="bg-white mb-4 p-1">
+
+        <div class="flex flex-col bg-gray-100 h-16 p-1 mb-1">
+          <legend>Variedad</legend>
+          <div class="flex items-center justify-end h-full">
+            <div class="w-1/3 flex-shrink"></div>
+            <label v-for="(_, id) of variedades" class="text-sm font-light flex-shrink-0 mr-6">
+              <input v-model="nota.variedad" type="radio" :value="id" class="pr-1">
+              {{ id.capitalize() }}
+            </label>
+          </div>
+        </div>
+
+        <div class="flex bg-gray-100 h-16 p-1 mb-2">
+          <label for="varietales" class="w-1/3 flex-shrink-0">Varietales</label>
+          <select multiple v-model="nota.varietales" id="varietales" class="w-full h-full text-sm font-light">
+            <option v-for="(_, id) of varietalesDeLaVariedad" :value="id">{{ id.capitalize() }}</option>
+          </select>
+        </div>
+
+        <div class="flex items-center h-8 p-1 mb-1">
+          <label for="productor" class="w-1/3 flex-shrink-0 font-light">Productor</label>
+          <input v-model.trim="nota.productor" type="text" placeholder="Escala humana" id="productor" class="border-b w-full mr-6">
+        </div>
+
+        <div class="flex items-center h-8 p-1 mb-1">
+          <label for="línea" class="w-1/3 flex-shrink-0 font-light">Línea</label>
+          <input v-model.trim="nota.línea" type="text" placeholder="Livverá" id="línea" class="border-b w-full mr-6">
+        </div>
+
+        <div class="flex items-center h-8 p-1 mb-1">
+          <label for="nombre" class="w-1/3 flex-shrink-0 font-light">Nombre</label>
+          <input v-model.trim="nota.nombre" type="text" placeholder="Malbec" id="nombre" class="border-b w-full mr-6">
+        </div>
+
+        <div class="flex items-center h-8 p-1 mb-1">
+          <label for="cosecha" class="w-1/3 flex-shrink-0 font-light">Cosecha</label>
+          <input v-model.trim="nota.cosecha" type="number" placeholder="2019" id="cosecha" class="border-b w-full mr-6">
+        </div>
+      </div>
     </section>
 
-    <h2 class="inline bg-white text-xl">Vino</h2>
-    <section class="bg-white mb-4 p-1 max-w-sm">
-
-      <div class="flex flex-col bg-gray-100 h-16 p-1 mb-1">
-        <legend>Variedad</legend>
-        <div class="flex items-center justify-end h-full">
-          <div class="w-1/3 flex-shrink"></div>
-          <label v-for="(_, id) of variedades" class="text-sm font-light flex-shrink-0 mr-6">
-            <input v-model="nota.variedad" type="radio" :value="id" class="pr-1">
-            {{ id.capitalize() }}
+    <section class="w-full max-w-sm">
+      <h2 class="inline bg-white text-xl">Vista</h2>
+      <div class="bg-white mb-4 p-1">
+        <div v-if="coloresDeLaVariedad">
+          <h3 class="pl-1 mb-1">Color</h3>
+          <label v-for="({ código }, id) of coloresDeLaVariedad" :style="{ background: código }" class="block h-16 mb-1">
+            <div class="absolute bg-white px-2 py-1 text-sm font-light" :style="{ color: código }">
+              <input v-model="nota.color" type="radio" :value="id" class="mr-1">
+              {{ id.capitalize() }}
+            </div>
           </label>
         </div>
-      </div>
-
-      <div class="flex bg-gray-100 h-16 p-1 mb-2">
-        <label for="varietales" class="w-1/3 flex-shrink-0">Varietales</label>
-        <select multiple v-model="nota.varietales" id="varietales" class="w-full h-full text-sm font-light">
-          <option v-for="(_, id) of varietalesDeLaVariedad" :value="id">{{ id.capitalize() }}</option>
-        </select>
-      </div>
-
-      <div class="flex items-center h-8 p-1 mb-1">
-        <label for="productor" class="w-1/3 flex-shrink-0 font-light">Productor</label>
-        <input v-model.trim="nota.productor" type="text" placeholder="Escala humana" id="productor" class="border-b w-full mr-6">
-      </div>
-
-      <div class="flex items-center h-8 p-1 mb-1">
-        <label for="línea" class="w-1/3 flex-shrink-0 font-light">Línea</label>
-        <input v-model.trim="nota.línea" type="text" placeholder="Livverá" id="línea" class="border-b w-full mr-6">
-      </div>
-
-      <div class="flex items-center h-8 p-1 mb-1">
-        <label for="nombre" class="w-1/3 flex-shrink-0 font-light">Nombre</label>
-        <input v-model.trim="nota.nombre" type="text" placeholder="Malbec" id="nombre" class="border-b w-full mr-6">
-      </div>
-
-      <div class="flex items-center h-8 p-1 mb-1">
-        <label for="cosecha" class="w-1/3 flex-shrink-0 font-light">Cosecha</label>
-        <input v-model.trim="nota.cosecha" type="number" placeholder="2019" id="cosecha" class="border-b w-full mr-6">
+        <p v-else class="font-light p-1">Seleccionar una variedad.</p>
       </div>
     </section>
 
-    <h2 class="inline bg-white text-xl">Vista</h2>
-    <section class="bg-white mb-4 p-1 max-w-sm">
-      <div v-if="coloresDeLaVariedad">
-        <h3 class="pl-1 mb-1">Color</h3>
-        <label v-for="({ código }, id) of coloresDeLaVariedad" :style="{ background: código }" class="block h-16 mb-1">
-          <div class="absolute bg-white px-2 py-1 text-sm font-light" :style="{ color: código }">
-            <input v-model="nota.color" type="radio" :value="id" class="mr-1">
-            {{ id.capitalize() }}
-          </div>
-        </label>
-      </div>
-      <p v-else class="font-light p-1">Seleccionar una variedad.</p>
-    </section>
-
-    <h2 class="inline bg-white text-xl">Olfato y gusto</h2>
-    <section class="bg-white mb-4 p-1 max-w-sm">
-      <div v-if="saboresDelVarietal">
-        <label v-for="({ descriptor }, id) of saboresDelVarietal" class="flex items-start bg-gray-100 h-16 p-1 pl-2 mb-1">
-          <input v-model="nota.sabores" type="checkbox" :value="id">
-          <img :src="`img/${ id.replace(/ /g,'-') }.svg`" class="h-full mx-2">
-          <div>
-            <h3 class="text-sm font-light">{{ descriptor.capitalize() }}</h3>
-            {{ id.capitalize() }}
-          </div>
-        </label>
-      </div>
-      <p v-else class="font-light p-1">Seleccionar al menos un varietal.</p>
-    </section>
-
-    <h2 class="inline bg-white text-xl">Estructura</h2>
-    <section class="bg-white mb-4 p-1 max-w-sm">
-      <div v-for="(mapa, id) of estructura" class="flex items-start bg-gray-100 h-16 p-1 mb-1">
-        <div class="w-1/3 flex-shrink-0">
-          <h3>{{ id.capitalize() }}</h3>
-          <label :for="id" class="text-sm text-center font-light">{{ [ '', ...mapa ][$root[id]].capitalize() }}</label>
+    <section class="w-full max-w-sm">
+      <h2 class="inline bg-white text-xl">Olfato y gusto</h2>
+      <div class="bg-white mb-4 p-1">
+        <div v-if="saboresDelVarietal">
+          <label v-for="({ descriptor }, id) of saboresDelVarietal" class="flex items-start bg-gray-100 h-16 p-1 pl-2 mb-1">
+            <input v-model="nota.sabores" type="checkbox" :value="id">
+            <img :src="`img/${ id.replace(/ /g,'-') }.svg`" class="h-full mx-2">
+            <div>
+              <h3 class="text-sm font-light">{{ descriptor.capitalize() }}</h3>
+              {{ id.capitalize() }}
+            </div>
+          </label>
         </div>
-        <input v-model.number="$root[id]" type="range" max="3" :id="id" class="w-full h-6 my-auto mr-6">
+        <p v-else class="font-light p-1">Seleccionar al menos un varietal.</p>
       </div>
     </section>
 
-    <h2 class="inline bg-white text-xl">Observaciones</h2>
-    <section class="bg-white p-1 mb-4 max-w-sm">
-      <textarea v-model.trim="nota.observaciones" rows="4" class="border resize-none font-light p-1 mb-1 w-full"></textarea>
-
-      <div class="flex items-start bg-gray-100 h-16 p-1 mb-1">
-        <h3 class="w-1/3 flex-shrink-0">Puntaje</h3>
-
-        <div class="w-full h-full flex items-center justify-around text-gray-500 mr-6">
-          <div>
-            <input v-model.number="nota.puntaje" type="radio" value="1" id=":(" class="absolute opacity-0">
-            <label for=":(">
-              <svg class="fill-current h-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M15.5,8C16.3,8 17,8.7 17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M12,14C13.75,14 15.29,14.72 16.19,15.81L14.77,17.23C14.32,16.5 13.25,16 12,16C10.75,16 9.68,16.5 9.23,17.23L7.81,15.81C8.71,14.72 10.25,14 12,14Z" />
-              </svg>
-            </label>
+    <section class="w-full max-w-sm">
+      <h2 class="inline bg-white text-xl">Estructura</h2>
+      <div class="bg-white mb-4 p-1">
+        <div v-for="(mapa, id) of estructura" class="flex items-start bg-gray-100 h-16 p-1 mb-1">
+          <div class="w-1/3 flex-shrink-0">
+            <h3>{{ id.capitalize() }}</h3>
+            <label :for="id" class="text-sm text-center font-light">{{ [ '', ...mapa ][$root[id]].capitalize() }}</label>
           </div>
-
-          <div>
-            <input v-model.number="nota.puntaje" type="radio" value="3" id=":|" class="absolute opacity-0">
-            <label for=":|">
-              <svg class="fill-current h-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M8.5,11A1.5,1.5 0 0,1 7,9.5A1.5,1.5 0 0,1 8.5,8A1.5,1.5 0 0,1 10,9.5A1.5,1.5 0 0,1 8.5,11M17,9.5A1.5,1.5 0 0,1 15.5,11A1.5,1.5 0 0,1 14,9.5A1.5,1.5 0 0,1 15.5,8A1.5,1.5 0 0,1 17,9.5M16,14V16H8V14H16Z" />
-              </svg>
-            </label>
-          </div>
-
-          <div>
-            <input v-model.number="nota.puntaje" type="radio" value="5" id=":)" class="absolute opacity-0">
-            <label for=":)">
-              <svg class="fill-current h-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path fill="currentColor" d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8C16.3,8 17,8.7 17,9.5M12,17.23C10.25,17.23 8.71,16.5 7.81,15.42L9.23,14C9.68,14.72 10.75,15.23 12,15.23C13.25,15.23 14.32,14.72 14.77,14L16.19,15.42C15.29,16.5 13.75,17.23 12,17.23Z" />
-              </svg>
-            </label>
-          </div>
+          <input v-model.number="$root[id]" type="range" max="3" :id="id" class="w-full h-6 my-auto mr-6">
         </div>
       </div>
     </section>
 
-    <button type="submit" class="bg-pink-300 hover:bg-pink-500 font-bold py-2 px-4">Guardar</button>
-    <button type="button" @click="borrarNota" class="bg-white hover:bg-gray-300 font-bold py-2 px-4">Borrar</button>
+    <section class="w-full max-w-sm">
+      <h2 class="inline bg-white text-xl">Observaciones</h2>
+      <div class="bg-white p-1 mb-4">
+        <textarea v-model.trim="nota.observaciones" rows="4" class="border resize-none font-light p-1 mb-1 w-full"></textarea>
+
+        <div class="flex items-start bg-gray-100 h-16 p-1 mb-1">
+          <h3 class="w-1/3 flex-shrink-0">Puntaje</h3>
+
+          <div class="w-full h-full flex items-center justify-around text-gray-500 mr-6">
+            <div>
+              <input v-model.number="nota.puntaje" type="radio" value="1" id=":(" class="absolute opacity-0">
+              <label for=":(">
+                <svg class="fill-current h-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M15.5,8C16.3,8 17,8.7 17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M12,14C13.75,14 15.29,14.72 16.19,15.81L14.77,17.23C14.32,16.5 13.25,16 12,16C10.75,16 9.68,16.5 9.23,17.23L7.81,15.81C8.71,14.72 10.25,14 12,14Z" />
+                </svg>
+              </label>
+            </div>
+
+            <div>
+              <input v-model.number="nota.puntaje" type="radio" value="3" id=":|" class="absolute opacity-0">
+              <label for=":|">
+                <svg class="fill-current h-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M8.5,11A1.5,1.5 0 0,1 7,9.5A1.5,1.5 0 0,1 8.5,8A1.5,1.5 0 0,1 10,9.5A1.5,1.5 0 0,1 8.5,11M17,9.5A1.5,1.5 0 0,1 15.5,11A1.5,1.5 0 0,1 14,9.5A1.5,1.5 0 0,1 15.5,8A1.5,1.5 0 0,1 17,9.5M16,14V16H8V14H16Z" />
+                </svg>
+              </label>
+            </div>
+
+            <div>
+              <input v-model.number="nota.puntaje" type="radio" value="5" id=":)" class="absolute opacity-0">
+              <label for=":)">
+                <svg class="fill-current h-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path fill="currentColor" d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8C16.3,8 17,8.7 17,9.5M12,17.23C10.25,17.23 8.71,16.5 7.81,15.42L9.23,14C9.68,14.72 10.75,15.23 12,15.23C13.25,15.23 14.32,14.72 14.77,14L16.19,15.42C15.29,16.5 13.75,17.23 12,17.23Z" />
+                </svg>
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="flex justify-between">
+        <button type="button" @click="borrarNota" class="bg-white hover:bg-gray-300 font-bold py-2 px-4">Borrar</button>
+        <button type="submit" class="bg-pink-300 hover:bg-pink-500 font-bold py-2 px-4">Guardar</button>
+      </div>
+    </section>
+
+    <section class="w-full max-w-sm"></section>
   </form>
 </div>
 
